--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
 body {
+  direction: rtl;
+  font-family: 'Lalezar', cursive !important;
+  list-style: none !important;
+  outline: none;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px 300px;
+  box-shadow: 0 0 10px rgb(109, 106, 106);
+}
+
+.header input {
+  width: 500px;
+  padding: 10px;
+  border: 1px solid rgb(214, 211, 211) !important;
+  border-radius: 10px;
+}
+
+.header button {
+  width: 150px;
+  border: none;
+  background-color: crimson;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.gallery {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.gallery img {
+  width: 25%;
+  height: 400px;
+  object-fit: cover;
 }
